--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1589,6 +1589,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -5601,6 +5604,14 @@ EncoderInertialCapture</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="shadow_type">none</property>
                                                             <child>
+                                                            <widget class="GtkAlignment" id="alignment35">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="top_padding">2</property>
+                                                            <property name="bottom_padding">2</property>
+                                                            <property name="left_padding">6</property>
+                                                            <property name="right_padding">6</property>
+                                                            <child>
                                                             <widget class="GtkButton" id="button_activate_chronopics">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
@@ -5639,6 +5650,8 @@ EncoderInertialCapture</property>
                                                             <property name="fill">False</property>
                                                             <property name="position">1</property>
                                                             </packing>
+                                                            </child>
+                                                            </widget>
                                                             </child>
                                                             </widget>
                                                             </child>
@@ -17396,6 +17409,14 @@ Concentric</property>
                                                             </packing>
                                                             </child>
                                                             <child>
+                                                            <widget class="GtkAlignment" id="alignment34">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">False</property>
+                                                            <property name="top_padding">2</property>
+                                                            <property name="bottom_padding">2</property>
+                                                            <property name="left_padding">6</property>
+                                                            <property name="right_padding">6</property>
+                                                            <child>
                                                             <widget class="GtkButton" id="button_activate_chronopics_encoder">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
@@ -17434,6 +17455,8 @@ Concentric</property>
                                                             <property name="fill">True</property>
                                                             <property name="position">1</property>
                                                             </packing>
+                                                            </child>
+                                                            </widget>
                                                             </child>
                                                             </widget>
                                                             </child>
@@ -21994,6 +22017,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
