--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1592,6 +1592,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -17435,7 +17438,7 @@ Concentric</property>
                                                             <widget class="GtkLabel" id="label132">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
-                                                            <property name="label">Device</property>
+                                                            <property name="label" translatable="yes">Device</property>
                                                             </widget>
                                                             <packing>
                                                             <property name="expand">True</property>
@@ -22017,6 +22020,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
