--- a/glade/repetitive_conditions.glade
+++ b/glade/repetitive_conditions.glade
@@ -4031,7 +4031,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="xalign">0</property>
-                                        <property name="label" translatable="yes">On encoder gravitatory rest is done ...</property>
+                                        <property name="label" translatable="yes">On encoder (gravitatory mode) rest is done ...</property>
                                       </widget>
                                     </child>
                                   </widget>
